--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode=production",
     "watch": "webpack --watch --mode=development --progress",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
