--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/justinSchellenberg/bms-react-simple-sidenav.git"
+    "url": "git+https://github.com/justinSchellenberg/react-simple-sidenav"
   },
   "keywords": [
     "react",
@@ -23,9 +23,9 @@
   "author": "Gaurav Chikhale",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/gauravchl/react-simple-sidenav/issues"
+    "url": "https://github.com/justinSchellenberg/react-simple-sidenav/issues"
   },
-  "homepage": "https://github.com/gauravchl/react-simple-sidenav#readme",
+  "homepage": "https://github.com/justinSchellenberg/react-simple-sidenav#readme",
   "peerDependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
